# tauri-plugins-workspace

./: .gitignore  .prettierignore  .prettierrc  .taurignore  Cargo.toml  README.md  README_ZH.md  deno.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: pre-commit
examples-app/: deno.json  package.json  vite.config.ts
examples-app/src/: App.css  App.tsx
examples-app/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
examples-app/src-tauri/capabilities/: android.json  mobile.json
examples-app/src-tauri/src/: lib.rs  main.rs
examples-app/src/pages/: AndroidPackageInstallDemo.tsx  IosNetworkDetectDemo.tsx  MobileOnBackpressedListenerDemo.tsx
