[workspace]
members = [
  "packages/*",
  # "packages/*/tests/*",
  # "packages/*/examples/*/src-tauri",
  "examples-app/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
log = "0.4"
tauri = { version = "2", default-features = false }
tauri-build = "2"
tauri-plugin = "2"
tauri-utils = "2"
serde_json = "1"
thiserror = "2"
url = "2"
schemars = "0.8"
dunce = "1"
specta = "=2.0.0-rc.20"
# TODO: remove when specta releases rc.21
specta-util = { version = "^0.0.7", default-features = false, features = [
  "export",
] }
glob = "0.3"
zbus = "4"

[workspace.package]
edition = "2021"
authors = ["kingsword09"]
license = "MIT"
rust-version = "1.77.2"
repository = "https://github.com/kingsword09/tauri-plugins-workspace"

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"