[package]
name = "examples-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["kingsword09"]
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "examples_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tauri = { workspace = true, features = ["wry"] }
tauri-plugin-opener = "2"


[target.'cfg(any(target_os = "ios"))'.dependencies]
tauri-plugin-ios-network-detect = { path = "../../packages/tauri-plugin-ios-network-detect", version = "2.0.0" }
